dropped "SDV_" from mod name

--- a/SecondInventory.csproj
+++ b/SecondInventory.csproj
@@ -63,8 +63,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bin\Debug\SDV_SecondInventory.dll" />
-    <Content Include="bin\Debug\SDV_SecondInventory.pdb" />
+    <Content Include="bin\Debug\SecondInventory.dll" />
+    <Content Include="bin\Debug\SecondInventory.pdb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Pathoschild.Stardew.ModBuildConfig.3.3.0\build\Pathoschild.Stardew.ModBuildConfig.targets" Condition="Exists('packages\Pathoschild.Stardew.ModBuildConfig.3.3.0\build\Pathoschild.Stardew.ModBuildConfig.targets')" />
