--- a/SecondInventory.csproj
+++ b/SecondInventory.csproj
@@ -65,7 +65,7 @@
   <ItemGroup>
     <Content Include="bin\Debug\SecondInventory.dll" />
     <Content Include="bin\Debug\SecondInventory.pdb" />
-    <Content Include="TextFile1.txt" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Pathoschild.Stardew.ModBuildConfig.3.3.0\build\Pathoschild.Stardew.ModBuildConfig.targets" Condition="Exists('packages\Pathoschild.Stardew.ModBuildConfig.3.3.0\build\Pathoschild.Stardew.ModBuildConfig.targets')" />
